# datasci112_notebooks

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
lectures/: Challenger Data Analysis.ipynb  Lecture - Types of Joins.ipynb  Lecture - Web Scraping.ipynb  Lecture 1 - DataFrames.ipynb  Lecture 10 - Introduction to Machine Learning.ipynb  Lecture 11 - K-Nearest Neighbors.ipynb  Lecture 13 - Model Selection and Hyperparameter Tuning.ipynb  Lecture 14 - Classification and K-Nearest Neighbors.ipynb  Lecture 16 - K-Means Clustering.ipynb  Lecture 2 - Relationships between Categorical Variables.ipynb  Lecture 7 - Encoding Categorical Variables as Quantitative.ipynb
lectures/01_intro_dataframe/: DataFrames.ipynb
lectures/02_intro_relationships_categorical_variables/: Relationships between Categorical Variables.ipynb
lectures/03_intro_quantitative_variables/: Quantitative Variables.ipynb
lectures/04_split_apply_combine_paradigm/: Split-Apply-Combine Paradigm.ipynb
lectures/05_multivariate_data_grammar_graphics/: Multivariate Data and the Grammar of Graphics.ipynb  Simpson Paradox.ipynb
lectures/06_distances_observations/: Distances between Observations.ipynb
lectures/07_encoding_categorical_variables_as_quantitative/: Encoding Categorical Variables as Quantitative.ipynb
lectures/08_textual_data_bag_words_n_grams/: Textual Data: Bag of Words and N-Grams.ipynb
lectures/09_vector_space_model_tf_idf/: Vector Space Model and TF-IDF.ipynb
lectures/10_introduction_machine_learning/: Introduction to Machine Learning.ipynb
(+69 files in other folders)
